# simple-json-parser

./: .gitignore  CMakeLists.txt  dependencies.cmake  project_options.cmake
cmake/: lto.cmake  sanitizers.cmake  warnings.cmake
src/: CMakeLists.txt
src/sandbox/: CMakeLists.txt  main.cpp
src/simple_json_parser/: CMakeLists.txt  parser.cpp  simple_json_parser.cpp
src/simple_json_parser/include/simple_json_parser/: simple_json_parser.hpp
src/simple_json_parser/include/simple_json_parser/detail/: array.hpp  boolean.hpp  errors.hpp  null.hpp  number.hpp  object.hpp  parser.hpp  string.hpp  value.hpp
test/: CMakeLists.txt
